--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,17 +1,12 @@
 image:
-  file: .gitpod.dockerfile
+  file: .gitpod.Dockerfile
+
+# List the ports you want to expose and what to do when they are served. See https://www.gitpod.io/docs/config-ports/
 ports:
-- port: 8080
-  onOpen: open-preview
+  - port: 3000
+    onOpen: open-preview
+
+# List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-- init: >
-    python3 -m pip install -r requirements.txt &&
-    python3 manage.py migrate
-  command: >
-    echo "from locallibrary.settings import *" > locallibrary/local_settings.py &&
-    echo "ALLOWED_HOSTS = ['*']" >> locallibrary/local_settings.py &&
-    export DJANGO_SETTINGS_MODULE=locallibrary.local_settings &&
-    python3 manage.py runserver 0.0.0.0:8080
-github:
-    prebuilds:
-        pullRequestsFromForks: true
+  - init: echo 'init script' # runs during prebuild
+    command: echo 'start script'
